# Rast

./: .gitignore  Cargo.toml  LICENSE  README.en.md  README.md  opencode.json  opencode.md  package.json  pnpm-lock.yaml  tsconfig.json
.changeset/: config.json  ten-melons-listen.md
.github/workflows/: changesets-version.yml  ci.yml  napi-release.yml  napi-rs.yml  release.yml  tag-release.yml
.serena/: project.yml
.serena/memories/: project_overview.md  serena_tool_limitations.md  style_conventions.md  suggested_commands.md  task_completion_checklist.md
.sisyphus/: boulder.json
.sisyphus/notepads/ast-grep-1.0-plan/: decisions.md  issues.md  learnings.md  problems.md
.sisyphus/notepads/rast-ast-tool/: learnings.md
.sisyphus/notepads/rast-ast-tool-v2/: decisions.md  issues.md  learnings.md  problems.md
.sisyphus/plans/: ast-grep-1.0-analysis.md  ast-grep-1.0-plan.md  rast-ast-tool-v2.md  rast-ast-tool.md
crates/ast_engine/: Cargo.toml
crates/ast_engine/src/: lib.rs  matcher.rs  node_trait.rs  overlap_resolution.rs  relational_rules.rs  rule_runtime.rs  span_mutator.rs  tests.rs  text_interpolation.rs  vue_sfc.rs  wildcard_parsing.rs  yaml_schema.rs
crates/ast_engine/tests/: composite_rules_tests.rs  equivalence_matching_tests.rs  metavariable_capture_tests.rs  node_trait_tests.rs  overlap_resolution_tests.rs  relational_rules_tests.rs  span_mutator_tests.rs  text_interpolation_tests.rs  trivia_absorption_tests.rs  vue_integration_tests.rs  vue_sfc_tests.rs  wildcard_parsing_tests.rs  yaml_schema_tests.rs
scripts/: e2e-test.js  verify-benchmark.js  verify-napi-mcp-e2e.js  verify-vue-offsets.js
